# CSE396_Vision_Module

./: CMakeLists.txt  CMakeLists_erdi.txt  README.md  TwoCamWorking.cpp  cameraOpen.cpp  main.cpp
CableCam/: CableSlope.cpp  CableSlope.h  StickManData.h  StickmanDetector.cpp  main.cpp
OpenCVCalisma/: CMakeLists.txt  CableSlope.cpp  CableSlope.h  StickManData.cpp  StickManData.h  StickmanDetector.cpp  StickmanDetector.h  main.cpp
OpenCVCalisma/CableCam/: StickManData.cpp  main.cpp
VisionModule/: CMakeLists.txt  CableSlope.h  StickManData.h  StickmanDetector.h  main.cpp
_Ersin/untitled/: CMakeLists.txt  hough
communication/: client.c  server.c
other/TheManFindOK/: StickManDataWithRectControlnORM.cpp
